# wamr-rust-sdk

./: .gitignore  .gitmodules  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  README.md
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  finalize.sh
.github/: dependabot.yml
.github/workflows/: main.yml
crates/wamr-bindgen/: Cargo.toml
crates/wamr-bindgen/examples/: function.rs  structure.rs
crates/wamr-bindgen/src/: binding_function.rs  function_trait.rs  lib.rs  types.rs
crates/wamr-macros/: Cargo.toml
crates/wamr-macros/src/: lib.rs
crates/wamr-sys/: Cargo.toml  README.md  build.rs
examples/: Cargo.toml  basic.rs
examples/modules/: basic_wasm32_unknown.wasm
examples/modules/basic/: Cargo.toml
examples/modules/basic/src/: lib.rs
examples/wasi-hello/: Cargo.toml  gcd_wasm32_wasi.wasm
examples/wasi-hello/src/: main.rs
examples/wasm-hello/: Cargo.toml
examples/wasm-hello/src/: main.rs
resources/test/: basic_wasm32_unknown.wasm  multiret.aot  multiret.wasm  string_concat_c_wasm32_wasi.wasm  string_concat_wasm32_wasi.wasm  wasi-demo-app.wasm
resources/test/basic/: Cargo.toml
resources/test/basic/src/: lib.rs
resources/test/multiret/: multiret.wat
resources/test/string-concat/: Cargo.toml  string_concat.wat
resources/test/string-concat/.cargo/: config.toml
resources/test/string-concat/src/: main.rs
src/: execution_environment.rs  function.rs  helper.rs  host_function.rs  instance.rs  lib.rs  module.rs  runtime.rs  value.rs  wasi_context.rs
tests/: host_function_test.rs
tests/fixtures/add-extra/: Cargo.toml
tests/fixtures/add-extra/src/: lib.rs
tests/fixtures/gcd/: Cargo.toml
tests/fixtures/gcd/src/: lib.rs
tests/fixtures/type/: Cargo.toml
tests/fixtures/type/src/: lib.rs  main.rs
