# Copyright (C) 2019 Intel Corporation. All rights reserved.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

[workspace]
members = ["crates/wamr-sys"]
exclude = [
    "examples/wasi-hello",
    "resources/test/gcd",
    "resources/test/add-extra",
    ".devcontainer",
    ".github",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
authors = ["The WAMR Project Developers"]

[package]
name = "wamr-rust-sdk"
description = "The Rust SDK of WAMR"
license.workspace = true
edition.workspace = true
repository = "https://github.com/bytecodealliance/wamr-rust-sdk"
version = "1.0.0"
readme = "README.md"
categories = ["api-bindings", "wasm"]
keywords = ["api-bindings", "wasm", "webassembly"]

[dependencies]
wamr-sys = { path = "crates/wamr-sys", version = "1.0.0" }

[target.'cfg( target_os = "espidf" )'.dependencies]
esp-idf-sys = { version = "0.34" }

[[package.metadata.esp-idf-sys.extra_components]]
bindings_header = "./crates/wamr-sys/wasm-micro-runtime/core/iwasm/include/wasm_export.h"
component_dirs = ["./crates/wamr-sys/wasm-micro-runtime/build-scripts/esp-idf"]

# [features]
# llvmjit = ["wamr-sys/llvmjit"]
