# Copyright (C) 2023 Liquid Reply GmbH. All rights reserved.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

[package]
name = "wamr-sys"
description = "Unsafe bindings for wasm-micro-runtime"
license.workspace = true
edition.workspace = true
repository = "https://github.com/bytecodealliance/wamr-rust-sdk"
version = "1.0.0"
readme = "README.md"
categories = ["api-bindings", "wasm"]
keywords = ["api-bindings", "wasm", "webassembly"]
include = [
    "/build.rs",
    "/src/lib.rs",
    "/wasm-micro-runtime/build-scripts",
    "/wasm-micro-runtime/CMakeLists.txt",
    "/wasm-micro-runtime/core/iwasm",
    "/wasm-micro-runtime/core/shared",
    "/wasm-micro-runtime/core/config.h",
    "/wasm-micro-runtime/core/version.h",
    "/README.md",
]

[dependencies]

[build-dependencies]
bindgen = "0.71"
cc = "1.2"
cmake = "0.1"

[features]
custom-section = []
dump-call-stack = []
esp-idf = []
hw-bound-check = []
llvmjit = []
multi-module = []
name-section = [ "custom-section" ]
std = []
