# Copyright (C) 2023 Liquid Reply GmbH. All rights reserved.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

[package]
name = "wamr-sys"
description = "Unsafe bindings for wasm-micro-runtime"
license.workspace = true
edition.workspace = true
repository = "https://github.com/bytecodealliance/wamr-rust-sdk"
version = "1.0.0"
readme = "README.md"
categories = ["api-bindings", "wasm"]
keywords = ["api-bindings", "wasm", "webassembly"]
include = [
    "/build.rs",
    "/src/lib.rs",
    "/wasm-micro-runtime/build-scripts",
    "/wasm-micro-runtime/CMakeLists.txt",
    "/wasm-micro-runtime/core/iwasm",
    "/wasm-micro-runtime/core/shared",
    "/wasm-micro-runtime/core/config.h",
    "/wasm-micro-runtime/core/version.h",
    "/README.md",
]

[dependencies]

[build-dependencies]
bindgen = "0.72"
cc = "1.2"
cmake = "0.1"
globwalk = "0.9.1"

[features]
default = []
default-set = ["aot", "libc-builtin", "libc-wasi", "simd", "reference-types", "bulk-memory", "interpreter", "fast-interpreter"]
esp-idf = []
std = []

aot = []  # WAMR_BUILD_AOT
aot-stack-frame = [] # WAMR_BUILD_AOT_STACK_FRAME
bulk-memory = []  # WAMR_BUILD_BULK_MEMORY
bulk-memory-optional = [] # WAMR_BUILD_BULK_MEMORY_OPT
custom-section = [] # WAMR_BUILD_CUSTOM_NAME_SECTION
debug-interpreter = [] # WAMR_BUILD_DEBUG_INTERP
dump-call-stack = [] # WAMR_BUILD_DUMP_CALL_STACK
fast-interpreter = ["interpreter"]
fast-jit = [] # WAMR_BUILD_FAST_JIT
gc = [] # WAMR_BUILD_GC
hw-bound-check = [] # WAMR_DISABLE_HW_BOUND_CHECK
interpreter = []
legacy-exception-handling = [] # WAMR_BUILD_EXCE_HANDLING
libc-builtin = [] # WAMR_BUILD_LIBC_BUILTIN
libc-uvwasi = [] # WAMR_BUILD_LIBC_UVWASI
libc-wasi = [] # WAMR_BUILD_LIBC_WASI
llvmjit = [] # WAMR_BUILD_JIT
memory-profiling = [] # WAMR_BUILD_MEMORY_PROFILING
memory64 = [] # WAMR_BUILD_MEMORY64
mini-loader = [] # WAMR_BUILD_MINI_LOADER
multi-memory = [] # WAMR_BUIL_MULTI_MEMORY
multi-module = [] # WAMR_BUILD_MULTI_MODULE
name-section = ["custom-section"]
pthread = [] # WAMR_BUILD_LIB_PTHREAD
pthread-semaphore = ["pthread"] # WAMR_BUILD_LIB_PTHREAD_SEMAPHORE
reference-types = [] # WAMR_BUILD_REF_TYPES
shared-memory = [] # WAMR_BUILD_SHARED_MEMORY
shrunk-memory = [] # WAMR_BUILD_SHRUNK_MEMORY
simd = [] # WAMR_BUILD_SIMD
simde = ["simd"] # WAMR_BUILD_LIB_SIMDE
tail-call = [] # WAMR_BUILD_TAIL_CALL
threads-manager = [] # WAMR_BUILD_THREAD_MGR
wasi-nn = [] # WAMR_BUILD_WASI_NN
wasi-threads = [] # WAMR_BUILD_LIB_WASI_THREADS

wamrc = []