# Copyright (C) 2023 Liquid Reply GmbH. All rights reserved.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

[package]
name = "wasi-hello"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
authors = ["The WAMR Project Developers"]

[dependencies]
wamr-rust-sdk = { git = "https://github.com/bytecodealliance/wamr-rust-sdk", tag = "v1.0.0" }
